--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,8 +19,7 @@ digest = { version = "0.9.0", default-features = false }
 rand_core = { version = "0.5", default-features = false, features = ["alloc"] }
 rand = { version = "0.8", default-features = false, optional = true }
 byteorder = { version = "1", default-features = false }
-serde = { version = "1", default-features = false, features = ["alloc"] }
-serde_derive = { version = "1", default-features = false }
+serde = { version = "1", features = [ "derive" ] }
 serde_json = "1.0"
 thiserror = { version = "1", optional = true }
 merlin = { version = "2", default-features = false }
