--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ criterion = "0.3"
 ark-algebra-test-templates = "0.3.0"
 ark-pallas = "0.4.0"
 ark-vesta = "0.4.0"
+ark-secp256k1 = { version = "0.4.0" }
 
 [features]
 default = ["std", "parallel", "asm"]
