--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,8 @@ ark-pallas = "0.4.0"
 ark-vesta = "0.4.0"
 ark-secp256k1 = { version = "0.4.0" }
 rand_chacha = "0.3.1"
+curve25519-dalek = "4.1.2"
+hex = "0.4.3"
 
 [features]
 default = ["std", "parallel", "asm"]
