Make r1cs tests depend on the yoloproofs feature
Disable yoloproofs by default again, since we're not using them.
Also remove obsolete `extern crate` references.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,7 +39,7 @@ ark-secp256k1 = { version = "0.4.0" }
 rand_chacha = "0.3.1"
 
 [features]
-default = ["std", "parallel", "asm", "yoloproofs"]
+default = ["std", "parallel", "asm"]
 std = ["thiserror"]
 asm = ["ark-ff/asm"]
 parallel = ["ark-ec/parallel", "ark-ff/parallel", "ark-std/parallel", "rayon"]
